--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: password_dumb
-description: A new Flutter package project.
+description: Guard your users against entering dumb passwords in your flutter app.
 version: 0.0.1
-homepage:
+homepage: https://github.com/Mujhtech/password-dumb
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -21,10 +21,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
-  # To add assets to your package, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
+
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
